# NutriTracker

./: .gitignore  GITHUB_SECRETS.md  README.md  TESTING.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .vercelignore  README.md  alembic.ini  env  pyproject.toml  requiements.txt  requirements.txt  samconfig.toml  seed.py  template.yaml  test.sh
backend/.aws-sam/: build.toml
backend/alembic/: env.py
backend/alembic/versions/: 577b54cb0f45_add_dietary_preferences_to_user_profile.py  7fdae63cf520_initial_database_schema.py  ddda771e3d43_create_food_categories_and_foods_tables.py
backend/app/: database.py  dependencies.py  main.py  models.py  security.py  test_database.py
backend/app/routers/: auth.py  dashboard.py  foodLog.py  foods.py  general.py  profile.py  recipe.py  recommendations.py  users.py
backend/app/schemas/: __init__.py  auth.py  dashboard.py  food.py  foodLog.py  profile.py
backend/app/services/: __init__.py  auth_service.py  dashboard_service.py  email.py  foodLog_service.py  food_service.py  profile_service.py  recipe_parser.py  recommendation_service.py
backend/data/: Anuvaad_INDB_2024.11.xlsx  pdf_extractor.py
backend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_food_log.py  test_foods.py  test_foods_simple.py  test_rate_limiting.py  test_recipe.py  test_recommendations.py  test_users.py
docs/: LOGO_PROMPT.md  SETUP_RECOMMENDATIONS.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  (+2 more)
(+22 files in other folders)
