[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.120.2",
    "google-genai",
    "magnum>=21.0.0",
    "mangum>=0.19.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.7",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.3",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.2",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
